# PublishSafe

./: README.md  pyproject.toml
scripts/: format.sh  lint.sh  test.sh
src/publishsafe/: cli.py  main.py
